--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>React Transform Boilerplate</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="/static/bundle.js"></script>
-  </body>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <title>How much does an H1B in the software industry pay?</title>
+
+      <link rel="stylesheet" href="www/lib/bootstrap/dist/css/bootstrap.min.css">
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="h1bgraph"></div>
+        </div>
+
+        <script src="static/bundle.js"></script>
+    </body>
 </html>
